# SecureAgentsForSmartCity

./: .env.example  LICENSE  README.md  docker-compose.yml  host_simulator.py  init_traffic_signal.py  inspect_traffic_signal.py  logging_utils.py  mcp_server.py  ngsi_client.py  policy_engine.py  pyproject.toml  requirements.txt  test_llm_integration.py
docs/: LLM_PLANNING_GUIDE.md  LLM_PLANNING_IMPLEMENTATION.md  paper_architecture.excalidraw
policies/: traffic_policy.rego
src/smartcity/app/: examples_llm_planner.py  experiments.py  host_simulator.py
src/smartcity/core/: llm_planner.py  planner.py
src/smartcity/ui/: dashboard.py
