[project]
name = "secure-agents-for-smart-city"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "fastapi>=0.111.0",
    "langchain==1.2.0",
    "langchain-openai==1.1.6",
    "pandas>=3.0.0",
    "pydantic>=2.7.3",
    "python-dotenv>=1.0.1",
    "requests==2.32.3",
    "streamlit>=1.50.0",
    "uvicorn>=0.30.1",
]
